[package]
name = "craft-zola"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Young <crates@jry.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version =  "1.0.73" }
clap = { version = "4.3.21", features = ["derive"] }
emojis = "0.6.0"
lazy_static = { version =  "1.4.0" }
markdown = { version =  "1.0.0-alpha.11" }
regex = "1.9.3"
slug = { version =  "0.1.4" }
time = { version =  "0.3.25", features = ["formatting", "parsing", "macros"] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.3"
walkdir = { version = "2.3.3" }
